fix truncateText issues

--- a/web/src/components/common/InfoRow.less
+++ b/web/src/components/common/InfoRow.less
@@ -2,4 +2,5 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  min-width: 53px;
 }
