--- a/web/src/components/common/TruncateText.less
+++ b/web/src/components/common/TruncateText.less
@@ -1,4 +1,5 @@
 .truncate-text {
   display: flex;
   justify-content: space-between;
+  max-width: 35vw;
 }
